Made line chart downloadable

--- a/client/src/app/shared/components/charts/line-chart/line-chart.component.html
+++ b/client/src/app/shared/components/charts/line-chart/line-chart.component.html
@@ -1,3 +1,8 @@
 <canvas #canvas id="{{ chartId() }}"></canvas>
 
-<app-circular-icon-button [icon]="IconName.DOWNLOAD" [iconSize]="18" />
+<app-circular-icon-button
+  (clicked)="downloadChart()"
+  [appTooltip]="'Herunterladen'"
+  [icon]="IconName.DOWNLOAD"
+  [iconSize]="18"
+/>
