--- a/client/src/app/shared/components/charts/polar-chart/polar-chart.component.html
+++ b/client/src/app/shared/components/charts/polar-chart/polar-chart.component.html
@@ -1,8 +1,8 @@
-<app-alert
-  alertType="info"
-  alertText="Hier kannst du sehen wie sich dein Volumen innerhalb einer Kategorie und einer bestimmten Woche zusammensetzt."
-></app-alert>
+<canvas #canvas [id]="chartId()"></canvas>
 
-<div>
-  <canvas #canvas [id]="chartId"></canvas>
-</div>
+<app-circular-icon-button
+  (clicked)="downloadChart()"
+  [appTooltip]="'Herunterladen'"
+  [icon]="IconName.DOWNLOAD"
+  [iconSize]="18"
+/>
