--- a/client/src/app/shared/components/charts/polar-chart/polar-chart.component.scss
+++ b/client/src/app/shared/components/charts/polar-chart/polar-chart.component.scss
@@ -1,3 +1,21 @@
+:host {
+  position: relative;
+
+  app-circular-icon-button {
+    cursor: pointer;
+    position: absolute;
+    right: 2rem;
+    top: 2rem;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+  }
+
+  &:hover app-circular-icon-button {
+    opacity: 1;
+  }
+}
+
 #polarAreaChart {
-  height: 32.5rem;
+  height: 450px;
+  max-width: 100%;
 }
