Make est max calculation more stable via data binding

--- a/client/src/app/features/training-plans/training-view/training-view.component.html
+++ b/client/src/app/features/training-plans/training-view/training-view.component.html
@@ -116,7 +116,7 @@
                   class="estMax"
                   [type]="'number'"
                   [name]="namePrefix + 'estMax'"
-                  [(value)]="exercise.estMax"
+                  [value]="exercise.estMax"
                   [ngClass]="{ 'opacity-0': exercise.estMax === undefined || exercise.estMax === 0 }"
                 />
               </td>
