--- a/client/src/app/shared/icon/icon.component.html
+++ b/client/src/app/shared/icon/icon.component.html
@@ -215,6 +215,13 @@
       <path d="M13 6h3a2 2 0 0 1 2 2v7"></path>
       <line x1="6" y1="9" x2="6" y2="21"></line>
     }
+    @case (IconName.SHARE) {
+      <circle cx="18" cy="5" r="3"></circle>
+      <circle cx="6" cy="12" r="3"></circle>
+      <circle cx="18" cy="19" r="3"></circle>
+      <line x1="8.59" y1="13.51" x2="15.42" y2="17.49"></line>
+      <line x1="15.41" y1="6.51" x2="8.59" y2="10.49"></line>
+    }
 
     @default {
       <path d="M0 0h24v24H0z" fill="none"></path>
