Format date in frontend instead of backend

--- a/client/src/app/features/training-plans/training-plan-card/training-plan-card.component.html
+++ b/client/src/app/features/training-plans/training-plan-card/training-plan-card.component.html
@@ -13,7 +13,7 @@
     <p class="card-text">{{ trainingPlan().trainingFrequency }} Trainings / Woche</p>
 
     <p class="card-text ml-3">
-      {{ trainingPlan().lastUpdated }}
+      {{ trainingPlan().lastUpdated | formatDate }}
     </p>
 
     @if (trainingPlan().averageTrainingDayDuration) {
