--- a/client/src/app/features/profile-2/profile.component.scss
+++ b/client/src/app/features/profile-2/profile.component.scss
@@ -28,17 +28,19 @@
   position: relative;
 
   img {
-    height: 6rem;
-    width: 6rem;
+    height: 5rem;
+    width: 5rem;
     border: 4px solid white;
+    border-radius: 1rem;
   }
 
   #file-input {
     position: absolute;
     top: 0;
     right: 0;
-    width: 6rem;
-    height: 6rem;
+    height: 5rem;
+    width: 5rem;
+    border-radius: 1rem;
     opacity: 0;
     cursor: pointer;
     z-index: 1000;
