Add optional search option in multi select and disable it for session type

--- a/client/src/app/features/training-plans/training-plans/training-plans.component.html
+++ b/client/src/app/features/training-plans/training-plans/training-plans.component.html
@@ -2,6 +2,8 @@
   <app-search-bar [(searchQuery)]="trainingPlanSearchQuery" />
 </div>
 
+<app-training-type-select [(selectedOptions)]="selectedTrainingTypes" />
+
 @if (isDragMode()) {
   <div class="row" cdkDropList (cdkDropListDropped)="updateTrainingPlanOrder($event)">
     @if (trainingPlans$ | async; as allTrainingPlans) {
