Add typeguards to determine training type in runtime

--- a/client/src/app/features/training-plans/training-plans/training-plans.component.html
+++ b/client/src/app/features/training-plans/training-plans/training-plans.component.html
@@ -17,7 +17,7 @@
         } @else {
           @for (trainingPlan of filteredTrainingPlans; track trainingPlan.id) {
             <div class="training-plan-card-container" [ngClass]="columnClass" cdkDrag>
-              <app-training-plan-card [trainingPlan]="trainingPlan" [columnClass]="columnClass" />
+              <app-training-plan-card [trainingPlan]="trainingPlan" />
 
               <app-circular-icon-button [iconSize]="18" cdkDragHandle [icon]="IconName.DRAG" />
             </div>
@@ -45,7 +45,7 @@
         } @else {
           @for (trainingPlan of filteredTrainingPlans; track trainingPlan.id) {
             <div class="training-plan-card-container" [ngClass]="columnClass">
-              <app-training-plan-card [trainingPlan]="trainingPlan" [columnClass]="columnClass" />
+              <app-training-plan-card [trainingPlan]="trainingPlan" />
             </div>
           }
         }
