--- a/client/src/app/features/training-plans/training-plan-card/training-plan-card.component.scss
+++ b/client/src/app/features/training-plans/training-plan-card/training-plan-card.component.scss
@@ -10,6 +10,13 @@
   }
 }
 
+.title-prefix {
+  color: #adadad;
+  font-size: 1.35rem;
+  text-transform: uppercase;
+  margin-right: 0.325rem;
+}
+
 .card-text {
   margin-bottom: 0.5rem;
 }
