--- a/client/src/app/features/training-plans/training-plans/training-plans.component.html
+++ b/client/src/app/features/training-plans/training-plans/training-plans.component.html
@@ -6,22 +6,16 @@
 
 @if (isDragMode()) {
   <div class="row" cdkDropList (cdkDropListDropped)="updateTrainingPlanOrder($event)">
-    @if (trainingPlans$ | async; as allTrainingPlans) {
-      @if (filteredTrainingPlans$ | async; as filteredTrainingPlans) {
-        @if (allTrainingPlans.length === 0) {
-          <app-alert
-            alertText="Du hast noch keine eigenen Trainingspläne erstellt. Erstelle welche mit dem Button oben!"
-          />
-        } @else if (filteredTrainingPlans.length === 0) {
-          <app-alert alertText="Keine deiner bestehenden Trainingpläne passen zu dieser Suchanfrage!" />
-        } @else {
-          @for (trainingPlan of filteredTrainingPlans; track trainingPlan.id) {
-            <div class="training-plan-card-container" [ngClass]="columnClass" cdkDrag>
-              <app-training-plan-card [trainingPlan]="trainingPlan" />
+    @if (filteredTrainingPlans$ | async; as filteredTrainingPlans) {
+      @if (filteredTrainingPlans.length === 0) {
+        <app-alert alertText="Keine deiner bestehenden Trainingpläne passen zu dieser Suchanfrage!" />
+      } @else {
+        @for (trainingPlan of filteredTrainingPlans; track trainingPlan.id) {
+          <div class="training-plan-card-container" [ngClass]="columnClass" cdkDrag>
+            <app-training-plan-card [trainingPlan]="trainingPlan" />
 
-              <app-circular-icon-button [iconSize]="18" cdkDragHandle [icon]="IconName.DRAG" />
-            </div>
-          }
+            <app-circular-icon-button [iconSize]="18" cdkDragHandle [icon]="IconName.DRAG" />
+          </div>
         }
       }
     } @else {
@@ -34,20 +28,14 @@
   </div>
 } @else {
   <div class="row">
-    @if (trainingPlans$ | async; as allTrainingPlans) {
-      @if (filteredTrainingPlans$ | async; as filteredTrainingPlans) {
-        @if (allTrainingPlans.length === 0) {
-          <app-alert
-            alertText="Du hast noch keine eigenen Trainingspläne erstellt. Erstelle welche mit dem Button oben!"
-          />
-        } @else if (filteredTrainingPlans.length === 0) {
-          <app-alert alertText="Keine deiner bestehenden Trainingpläne passen zu dieser Suchanfrage!" />
-        } @else {
-          @for (trainingPlan of filteredTrainingPlans; track trainingPlan.id) {
-            <div class="training-plan-card-container" [ngClass]="columnClass">
-              <app-training-plan-card [trainingPlan]="trainingPlan" />
-            </div>
-          }
+    @if (filteredTrainingPlans$ | async; as filteredTrainingPlans) {
+      @if (filteredTrainingPlans.length === 0) {
+        <app-alert alertText="Keine deiner bestehenden Trainingpläne passen zu dieser Suchanfrage!" />
+      } @else {
+        @for (trainingPlan of filteredTrainingPlans; track trainingPlan.id) {
+          <div class="training-plan-card-container" [ngClass]="columnClass">
+            <app-training-plan-card [trainingPlan]="trainingPlan" />
+          </div>
         }
       }
     } @else {
