--- a/client/src/app/shared/icon/icon.component.html
+++ b/client/src/app/shared/icon/icon.component.html
@@ -237,6 +237,11 @@
       <line x1="8" y1="2" x2="8" y2="6"></line>
       <line x1="3" y1="10" x2="21" y2="10"></line>
     }
+    @case (IconName.SAVE) {
+      <path d="M19 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h11l5 5v11a2 2 0 0 1-2 2z"></path>
+      <polyline points="17 21 17 13 7 13 7 21"></polyline>
+      <polyline points="7 3 7 8 15 8"></polyline>
+    }
 
     @default {
       <path d="M0 0h24v24H0z" fill="none"></path>
