--- a/client/src/app/features/training-plans/training-plan-card/training-plan-card.component.html
+++ b/client/src/app/features/training-plans/training-plan-card/training-plan-card.component.html
@@ -9,7 +9,7 @@
     <img class="img-fluid" [src]="trainingPlan().pictureUrl ?? '/images/profile-placeholder.webp'" alt="Avatar" />
   </div>
   <div class="card-body" style="overflow-y: auto">
-    @let titlePrefix = isTrainingPlan() ? 'Plan' : 'Session';
+    @let titlePrefix = trainingPlanType() === TrainingPlanType.PLAN ? 'Plan' : 'Session';
 
     <h4 class="card-title">
       <span class="title-prefix">{{ titlePrefix }}</span
@@ -60,6 +60,8 @@
         (buttonClick)="showDeleteTrainingPlanModal()"
       />
     </div>
-    <div>{{ trainingPlan().percentageFinished }}%</div>
+    @if (trainingPlan().percentageFinished) {
+      <div>{{ trainingPlan().percentageFinished }}%</div>
+    }
   </div>
 </div>
