Add type checks for undefined training sessions  + improve layout

--- a/client/src/app/features/profile-2/change-profile-picture-confirmation/change-profile-picture-confirmation.component.html
+++ b/client/src/app/features/profile-2/change-profile-picture-confirmation/change-profile-picture-confirmation.component.html
@@ -1,10 +1,15 @@
 @if (isCropView()) {
-  <image-cropper
-    [imageBase64]="image()!"
-    [maintainAspectRatio]="false"
-    (imageCropped)="imageCropped($event)"
-    format="png"
-  />
+  <div class="cropper-container">
+    <image-cropper
+      [imageBase64]="image()!"
+      [maintainAspectRatio]="false"
+      (imageCropped)="imageCropped($event)"
+      format="png"
+    />
+
+    <!-- Dynamisch positioniertes SVG -->
+    <app-icon [style]="svgStyles" #confirmCropIcon [name]="IconName.CHECK" (clicked)="confirmCrop()" />
+  </div>
 } @else {
   <div class="text-center p-3">
     <div class="d-flex justify-content-center align-items-center">
