--- a/client/src/app/features/profile-2/change-profile-picture-confirmation/change-profile-picture-confirmation.component.scss
+++ b/client/src/app/features/profile-2/change-profile-picture-confirmation/change-profile-picture-confirmation.component.scss
@@ -3,3 +3,12 @@
     flex-direction: column !important;
   }
 }
+
+.cropper-container {
+  position: relative;
+  display: inline-block;
+}
+
+app-icon {
+  position: absolute;
+}
