--- a/client/src/app/shared/icon/icon.component.html
+++ b/client/src/app/shared/icon/icon.component.html
@@ -242,6 +242,9 @@
       <polyline points="17 21 17 13 7 13 7 21"></polyline>
       <polyline points="7 3 7 8 15 8"></polyline>
     }
+    @case (IconName.CHECK) {
+      <polyline points="20 6 9 17 4 12"></polyline>
+    }
 
     @default {
       <path d="M0 0h24v24H0z" fill="none"></path>
