--- a/client/src/app/shared/components/image-cropper/image-cropper-with-icon.component.scss
+++ b/client/src/app/shared/components/image-cropper/image-cropper-with-icon.component.scss
@@ -1,11 +1,14 @@
 :host {
-  position: relative;
+  display: grid;
+  grid-template-columns: 87.5% 12.5%;
+  gap: 10px;
+  align-items: center;
+}
+
+image-cropper {
   width: 100%;
-  height: 100%;
 }
 
 app-circular-icon-button {
-  position: absolute;
-  top: 45%;
-  right: 5%;
+  justify-self: center;
 }
