--- a/client/src/app/features/training-session/session-view/session-view.component.html
+++ b/client/src/app/features/training-session/session-view/session-view.component.html
@@ -113,19 +113,25 @@
   </table>
 
   <div class="navigation-container">
-    <app-pagination [currentPage]="version() - 1" [totalPages]="trainingSession()?.versions()?.length ?? 0" />
+    <app-pagination
+      [currentPage]="version() - 1"
+      [totalPages]="trainingSession()?.versions()?.length ?? 0"
+      (pageChanged)="navigateToVersion($event + 1)"
+    />
 
     <div>
       <app-icon
         class="week-navigation-icon"
         [appTooltip]="'Vorherige Woche'"
         [name]="IconName.CHEVRON_LEFT"
+        (clicked)="navigateToVersion(version() - 1)"
         [size]="28"
       />
       <app-icon
         class="week-navigation-icon"
         [appTooltip]="'Näcshte Woche'"
         [name]="IconName.CHEVRON_RIGHT"
+        (clicked)="navigateToVersion(version() + 1)"
         [size]="28"
       />
     </div>
