Extract logic for downloading image into own service

--- a/client/src/app/features/gym-ticket/gym-ticket.component.html
+++ b/client/src/app/features/gym-ticket/gym-ticket.component.html
@@ -13,6 +13,8 @@
         <img [src]="image()" alt="Upload Ticket" class="ticket-image" />
 
         <input type="file" #fileInput (change)="displayUploadedImage($event)" accept="image/*" hidden />
+
+        <app-circular-icon-button (click)="downloadImage($event)" [icon]="IconName.DOWNLOAD" />
       </div>
     }
   } @else {
