--- a/client/src/app/features/gym-ticket/gym-ticket.component.scss
+++ b/client/src/app/features/gym-ticket/gym-ticket.component.scss
@@ -14,6 +14,16 @@
   border-radius: 10px;
 }
 
+.upload-container {
+  position: relative;
+
+  app-circular-icon-button {
+    position: absolute;
+    right: 1rem;
+    bottom: 1rem;
+  }
+}
+
 image-cropper.ticket-image {
   display: grid;
   place-items: center;
