Use image service in chart component

--- a/client/src/app/shared/components/charts/line-chart/line-chart.component.html
+++ b/client/src/app/shared/components/charts/line-chart/line-chart.component.html
@@ -1,7 +1,7 @@
 <canvas #canvas id="{{ chartId() }}"></canvas>
 
 <app-circular-icon-button
-  (clicked)="downloadChart()"
+  (click)="downloadChart()"
   [appTooltip]="'Herunterladen'"
   [icon]="IconName.DOWNLOAD"
   [iconSize]="18"
