Increase chart size in mobile to 400px

--- a/client/src/app/features/training-plans/training-day-statistics/training-day-statistics.component.html
+++ b/client/src/app/features/training-plans/training-day-statistics/training-day-statistics.component.html
@@ -4,9 +4,9 @@
   </div>
 
   <div class="chart-grid">
-    <app-line-chart [chartId]="'tonnageChart'" [data]="volumeChartData()" yAxisTitle="Tonnage (kg)" />
+    <app-line-chart [data]="volumeChartData()" yAxisTitle="Tonnage (kg)" />
 
-    <app-line-chart [chartId]="'performanceChart'" [data]="performanceChartData()" yAxisTitle="Est. Max (kg)" />
+    <app-line-chart [data]="performanceChartData()" yAxisTitle="Est. Max (kg)" />
   </div>
 
   <div class="chart-grid">
