--- a/client/src/app/features/training-plans/training-day-statistics/training-day-statistics.component.html
+++ b/client/src/app/features/training-plans/training-day-statistics/training-day-statistics.component.html
@@ -10,6 +10,7 @@
   </div>
 
   <div class="chart-grid">
+    <app-grouped-bar-chart [data]="setsData()" yAxisTitle="Satzanzahl" />
     <app-polar-chart [data]="sessionDurationChartData()" />
   </div>
 } @else {
