--- a/client/src/app/shared/components/charts/grouped-bar-chart/grouped-bar-chart.component.html
+++ b/client/src/app/shared/components/charts/grouped-bar-chart/grouped-bar-chart.component.html
@@ -1,1 +1,8 @@
-<canvas #barChartCanvas id="barChart"></canvas>
+<canvas #canvas id="{{ chartId() }}"></canvas>
+
+<app-circular-icon-button
+  (click)="downloadChart()"
+  [appTooltip]="'Herunterladen'"
+  [icon]="IconName.DOWNLOAD"
+  [iconSize]="18"
+/>
