Add comments and position option for notifcation badge

--- a/client/src/app/features/usage-statistics/usage-statistics.component.html
+++ b/client/src/app/features/usage-statistics/usage-statistics.component.html
@@ -1,4 +1,4 @@
-@if (usageStatisticsData$ | async; as usageData) {
+<!-- @if (usageStatisticsData$ | async; as usageData) {
   <app-activity-calendar [activityData]="usageData.activityCalendarData" />
 
   <app-grouped-bar-chart
@@ -11,3 +11,4 @@
   <app-chart-skeleton [rows]="4" />
   <app-chart-skeleton [rows]="4" />
 }
+ -->
