--- a/client/src/app/shared/components/notification-badge/notification-badge.component.scss
+++ b/client/src/app/shared/components/notification-badge/notification-badge.component.scss
@@ -1,15 +1,22 @@
-:host {
+span {
   position: absolute;
-  top: -8px;
-  right: -4px;
+  top: -12px;
   background-color: var(--accent-color);
   color: white;
   padding: 2px;
   font-size: 0.75rem;
   font-weight: bold;
-  min-width: 24px;
-  height: 24px;
+  min-width: 22px;
+  height: 22px;
   border-radius: 50%;
   display: grid;
   place-items: center;
+
+  &.top-right {
+    right: -16px;
+  }
+
+  &.top-left {
+    left: -16px;
+  }
 }
